fix: Fixed text contrast

--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -5,6 +5,7 @@
 @import "header";
 
 body {
+    color: #1f2e41;
     font-family: Nunito, sans-serif;
 }
 
